# chathura_motors_erp_app

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
chatura_motors/: hooks.py  modules.txt
chatura_motors/chatura_motors/custom/: customer.json  item.json  item_barcode.json
chatura_motors/chatura_motors/report/customers_outstanding_report/: customers_outstanding_report.js  customers_outstanding_report.py
chatura_motors/config/: desktop.py  docs.py
