[project]
name = "chatura_motors"
authors = [
    { name = "Thisara Gamage", email = "wgt.shaminda@gmail.com"}
]
description = "This app includes customizations for a vehicle repair and spare parts sales system built on ERPNext, tailored to manage repair workflows, inventory, and sales processes specific to the automotive industry"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
